Fix footer. Add padding to placeholder text.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div>
             <form method="GET" name="searchbar">
-            <input id="searchbar" type="text" name="search" value="Search on Google!">
+            <input id="searchbar" type="text" name="search" placeholder="Search on Google!" style="padding-left: 5px">
             </form>
         </div>
         <div>
@@ -31,7 +31,9 @@
             <input class="button" type="submit" value="I'm Feeling Lucky" name="lucky">
         </div>
         <footer>
-            <div id="country">Denmark</div>
+            <ul id="country">
+                <li>Denmark</li>
+            </ul>
             <ul id="footer">
                 <li><a href=#>Advertising</a></li>
                 <li><a href=#>Business</a></li>
