Fix buttons, searchbar. Need footer, grid-menu, and maybe links

--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
     </head>
 
     <body>
-        <header>
+        <navbar class="navbar">
             <ul>
                 <li><a href=#>Gmail</a></li>
                 <li><a href=#>Images</a></li>
                 <li><a href=#>Menu</a></li>
                 <li><a href=#>Your profile</a></li>
             </ul>
-        </header>
+        </navbar>
         <div class="logo">
             <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The Google Logo">    
         </div>
         <div>
             <form method="GET" name="searchbar">
-            <input id="searchbar" type="text" name="search" placeholder="Search on Google!" style="padding-left: 5px">
+            <input id="searchbar" type="text" name="search" style="padding-left: 5px">
             </form>
         </div>
         <div>
             <input class="button" type="submit" value="Google Search" name="search">
             <input class="button" type="submit" value="I'm Feeling Lucky" name="lucky">
         </div>
+        <div class="oi">Google offered in: <a href="#">Dansk</a></div>
         <footer>
             <ul id="country">
                 <li>Denmark</li>
