--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <!--Navigation bar-->
         <navbar class="navbar">
             <ul>
                 <li><a href=#>Gmail</a></li>
@@ -18,14 +19,17 @@
                 <li><a href=#>Your profile</a></li>
             </ul>
         </navbar>
+        <!--Logo-->
         <div class="logo">
             <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The Google Logo">    
         </div>
+        <!--Searchbar-->
         <div>
             <form method="GET" name="searchbar">
             <input id="searchbar" type="text" name="search" style="padding-left: 5px">
             </form>
         </div>
+        <!--Buttons + Offered in-->
         <div>
             <input class="button" type="submit" value="Google Search" name="search">
             <input class="button" type="submit" value="I'm Feeling Lucky" name="lucky">
@@ -35,6 +39,7 @@
             <ul id="country">
                 <li>Denmark</li>
             </ul>
+            <!--Footer - needs rework-->
             <ul id="footer">
                 <li><a href=#>Advertising</a></li>
                 <li><a href=#>Business</a></li>
