--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <!--Navigation bar-->
         <navbar class="navbar">
             <ul>
-                <li><a href=#>Gmail</a></li>
-                <li><a href=#>Images</a></li>
-                <li><a href=#>Menu</a></li>
-                <li><a href=#>Your profile</a></li>
+                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Gmail</a></li>
+                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Images</a></li>
+                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank"><img class="grid" src="https://cdn1.imggmi.com/uploads/2019/8/19/7f5497f797a982863d7b6919ff6b1ced-full.png"></a></li>
+                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank"><img class="pp" src="https://lh3.googleusercontent.com/-uPFaH48BEdU/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rcG0DxeexFcBpPEqErKjDqrW5JWhA.CMID/s32-c/photo.jpg"></a></li>
             </ul>
         </navbar>
         <!--Logo-->
@@ -31,24 +31,24 @@
         </div>
         <!--Buttons + Offered in-->
         <div>
-            <input class="button" type="submit" value="Google Search" name="search">
-            <input class="button" type="submit" value="I'm Feeling Lucky" name="lucky">
+            <input class="button" type="submit" value="Google Search" name="search" onclick="location.href='https://github.com/yoyohohoxd/google-homepage'">
+            <input class="button" type="submit" value="I'm Feeling Lucky" name="lucky" onclick="location.href='https://github.com/yoyohohoxd/google-homepage'">
         </div>
-        <div class="oi">Google offered in: <a href="#">Dansk</a></div>
+        <div class="oi">Google offered in: <a href="https://github.com/yoyohohoxd/google-homepage">Dansk</a></div>
         <footer>
             <ul id="country">
                 <li>Denmark</li>
             </ul>
             <!--Footer - needs rework-->
             <ul id="footer">
-                <li><a href=#>Advertising</a></li>
-                <li><a href=#>Business</a></li>
-                <li><a href=#>About</a></li>
-                <li><a href=#>How Search Works</a></li>
+                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Advertising</a></li>
+                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Business</a></li>
+                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">About</a></li>
+                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">How Search Works</a></li>
                 <span>
-                        <li><a href=#>Privacy</a></li>
-                        <li><a href=#>Terms</a></li>
-                        <li><a href=#>Settings</a></li>
+                        <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Privacy</a></li>
+                        <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Terms</a></li>
+                        <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Settings</a></li>
                 </span>
             </ul>
         </footer>
