--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>Google</title>
         <meta charset="UTF-8">
+        <link rel="icon" href="https://www.sccpre.cat/mypng/detail/3-38913_transparent-background-google-icon.png">
     </head>
 
     <body>
@@ -35,22 +36,22 @@
             <input class="button" type="submit" value="I'm Feeling Lucky" name="lucky" onclick="location.href='https://github.com/yoyohohoxd/google-homepage'">
         </div>
         <div class="oi">Google offered in: <a href="https://github.com/yoyohohoxd/google-homepage">Dansk</a></div>
-        <footer>
-            <ul id="country">
-                <li>Denmark</li>
-            </ul>
-            <!--Footer - needs rework-->
-            <ul id="footer">
-                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Advertising</a></li>
-                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Business</a></li>
-                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">About</a></li>
-                <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">How Search Works</a></li>
-                <span>
-                        <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Privacy</a></li>
-                        <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Terms</a></li>
-                        <li><a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Settings</a></li>
+        <!--Footer-->
+        <footer class="footer">
+            <div class="country">
+                <span>Denmark</span>
+            </div>
+            <div class="footerbar">
+                <a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Advertising</a>
+                <a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Business</a>
+                <a href=https://github.com/yoyohohoxd/google-homepage target="_blank">About</a>
+                <a href=https://github.com/yoyohohoxd/google-homepage target="_blank">How Search Works</a>
+                <span class="right">
+                <a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Privacy</a>
+                <a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Terms</a>
+                <a href=https://github.com/yoyohohoxd/google-homepage target="_blank">Settings</a>
                 </span>
-            </ul>
+            </div>
         </footer>
     </body>
 
